# Bbsoft-python-sdk

./: README.md  pyproject.toml
bbsoft/: __init__.py  _http.py  _utils.py  client.py  enums.py  exceptions.py
bbsoft/resources/: __init__.py  accounts.py  discounts.py  fuel_orders.py  products.py  shifts.py  transactions.py  vehicles.py
