[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbsoft"
version = "0.1.0"
description = "Python SDK for the BBSoft FMS API"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "responses>=0.23"]
